# pico-sdk-struct-issue

./: CMakeLists.txt  build_and_flash.sh  test.c
